<resources>
    <string name="app_name">Github User</string>
    <string name="user_name">Username</string>
    <string name="search">Search</string>
    <string name="search_hint">Find User</string>
    <string name="amount_followers">%1$d\nFollowers</string>
    <string name="amount_following">%1$d\nFollowing</string>
    <string name="tab_title_followers">Followers</string>
    <string name="tab_title_following">Following</string>
    <string name="title_detail_github">Detail Github</string>
    <string name="title_favorite_user">Favorite User</string>

    <string name="no_detail_user_data">-</string>
    <string name="no_favorite">There are no favorite users yet</string>
    <string name="no_user">User not found</string>
    <string name="no_followers">Has no followers yet</string>
    <string name="no_following">No one has followed yet</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="failed_to_load">Failed to load %1$s data</string>
    <string name="image">image</string>
    <string name="button_for_favorite">Button For Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="button_for_refresh">Button for refresh</string>
    <string name="refresh">Refresh</string>

</resources>