<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_avatar"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_avatar"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/tv_detail_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_username"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="@string/user_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_login">

        <TextView
            android:id="@+id/tv_detail_amount_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="@string/amount_followers" />

        <TextView
            android:id="@+id/tv_detail_amount_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="@string/amount_following" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>